# your-qr

./: README.md  build.sh
.github/: FUNDING.yml
balancer/: Cargo.toml  README.md
qrgen/: Cargo.toml  README.md
qrgen/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: database.rs  main.rs  services.rs
server/src/base/: response.rs
server/src/database/: users.rs
server/src/routes/: user.rs  users.rs
server/src/routes/user/: create.rs  structs.rs
server/src/routes/users/: create.rs
server/src/services/: hash_pass.rs  structs.rs  verify_pass.rs
web/: .gitignore  index.html  package.json
