[package]
name = "qrgen_wasm"
version = "0.1.0"
description = "A WASM package to generate QR codes!"
license = "GPL-3.0"
repository = "https://github.com/neursh/kew-ar"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
qrcode = { version = "0.14.1", default-features = false }
