[package]
name = "kewar-server"
version = "0.1.0"
description = "A server implementation for Kewar!"
license = "GPL-3.0"
repository = "https://github.com/neursh/kew-ar"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.6"
mongodb = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
skytable = "0.8.12"
tokio = { version = "1.48.0", features = ["full"] }
