[package]
name = "kewar-server"
version = "0.1.0"
description = "A server implementation for Kewar!"
license = "GPL-3.0"
repository = "https://github.com/neursh/kew-ar"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.6"
dashmap = "6.1.0"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
mongodb = { version = "3.3.0", features = ["bson-3"] }
nanoid = "0.4.0"
reqwest = { version = "0.12.24", features = ["json"] }
resend-rs = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
skytable = "0.8.12"
tokio = { version = "1.48.0", features = ["full"] }
